--- a/ebay/Views/Shared/_Layout.cshtml
+++ b/ebay/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">  
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
     
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
@@ -52,12 +53,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
-                    <a href=".">
-                        <img src="/assets/static/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+                    <a asp-action="Index" asp-controller="Public" asp-area="Public">
+						BmazonX
+                        @* <img src="/assets/static/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image"> *@
                     </a>
                 </h1>
                 <div class="navbar-nav flex-row order-md-last">
-                    <div class="nav-item d-none d-md-flex me-3">
+                    @* <div class="nav-item d-none d-md-flex me-3">
                         <div class="btn-list">
                             <a href="https://github.com/tabler/tabler" class="btn" target="_blank" rel="noreferrer">
                                 <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
@@ -70,8 +72,8 @@
                                 Sponsor
                             </a>
                         </div>
-                    </div>
-                    <div class="d-none d-md-flex">
+                    </div> *@
+                    @* <div class="d-none d-md-flex">
                         <a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="Enable dark mode" data-bs-toggle="tooltip"
                            data-bs-placement="bottom">
                             <!-- Download SVG icon from http://tabler-icons.io/i/moon -->
@@ -166,17 +168,53 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> *@
+					<div class="collapse navbar-collapse" id="navbar-menu">
+						<div class="navbar">
+							<div class="container-xl">
+								<ul class="navbar-nav">
+									 <li class="nav-item dropdown">
+										<a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
+											<span class="nav-link-icon d-md-none d-lg-inline-block">
+												<!-- Download SVG icon from http://tabler-icons.io/i/package -->
+												<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" /><path d="M12 12l8 -4.5" /><path d="M12 12l0 9" /><path d="M12 12l-8 -4.5" /><path d="M16 5.25l-8 4.5" /></svg>
+											</span>
+											<span class="nav-link-title">
+												Management
+											</span>
+										</a>
+										<div class="dropdown-menu">
+											<div class="dropdown-menu-columns">
+												<div class="dropdown-menu-column">
+													<a class="dropdown-item" asp-action="Index" asp-controller="Product" asp-area="admin">
+														Product
+													</a>
+													<a class="dropdown-item" asp-action="Index" asp-controller="OrderManagement" asp-area="admin">
+														Order
+													</a>
+													<a class="dropdown-item" asp-action="Index" asp-controller="Category" asp-area="admin">
+														Category
+														@* <span class="badge badge-sm bg-green-lt text-uppercase ms-auto">New</span> *@
+													</a>                                           
+												</div>
+											</div>
+										</div>
+                            		</li>
+								</ul>
+							</div>
+						</div>
+					</div>
                     
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
-                            <span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)"></span>
-                            
+                            @* <span class="avatar avatar-sm" style="background-image: url(/assets/static/avatars/000m.jpg)"></span> *@
+                            <i class="bi bi-person-lines-fill"></i>
+							&nbsp &nbsp
+                                <div class=" small text-muted">Admin</div>
                             <div class="d-none d-xl-block ps-2">
                                 <div>
                                     <partial name="_LoginPartial"/>
                                 </div>
-                                <div class="mt-1 small text-muted">UI Designer</div>
                             </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -201,7 +239,8 @@
             </div>
         </header>
         <header class="navbar-expand-md">
-           <partial name = "_Layoutnav"/>
+
+           @* <partial name = "_Layoutnav"/> *@
         </header>
         <div class="page-wrapper">
             
@@ -946,13 +985,18 @@
       // @@formatter:on
     </script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="//cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+	<script>
+		let table = new DataTable('#myDataTable');
+	</script>
+	
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script>
     $(document).ready(function () {
       $('.select2').select2();
     });
   </script>
+    
      @await Component.InvokeAsync("Notyf")
      @RenderSection("scripts", required: false)
      </body>
