--- a/ebay/wwwroot/Public/css/style.css
+++ b/ebay/wwwroot/Public/css/style.css
@@ -264,6 +264,15 @@ a.more {
   background: #314d43;
   border-color: #314d43;
 }
+.star-rating {
+  line-height: 32px;
+  font-size: 3em;
+}
+
+.star-rating .fa-star {
+  color: yellow;
+
+}
 .btn.btn-secondary {
   color: #2f2f2f;
   background: #f9bf29;
