--- a/ebay/Areas/Public/Views/Review/AddReview.cshtml
+++ b/ebay/Areas/Public/Views/Review/AddReview.cshtml
@@ -7,6 +7,9 @@
         line-height: 32px;
         font-size: 3em;
     }
+    .star-rating .fa-star {
+        color: rgb(198, 198, 0);
+    }
 </style>
 <div class="container mt-3">
     <h2 class="text-dark text-center ">My Review</h2>
